--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .image-container {
     text-align: center;
     margin-bottom: 20px;
@@ -78,8 +77,46 @@
 }
 
   
-=======
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
 
+nav {
+    background-color: #2c3e50; 
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #ecf0f1;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+nav ul li a:hover {
+    color: #4df266;
+}
+
+.nav-item.active {
+    color: #f2e74d;
+}
 
 .quizContainer {
     display: flex;
@@ -186,4 +223,3 @@
 .quizSubmitContainer > button:hover {
     background-color: #45a049; /* Darker green on hover */
 }
->>>>>>> f60566a (Created quiz template for every continent)
