--- a/style.css
+++ b/style.css
@@ -13,4 +13,64 @@
     color: #333;
     margin-top: 10px;
   }
+
+.map-container {
+    position: relative;
+    display: block;
+    text-align: center; 
+    margin-top: 20px; 
+}
+
+.map-image {
+    max-width: 700px;  
+    width: 100%;       
+    max-height: 600px;
+    height: 100%;      
+    margin: 0 auto;   
+    display: block;    
+}
+
+.region-button {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transform: translate(-50%, -50%);
+}
+
+.region-button:hover {
+    background-color: rgba(255, 165, 0, 0.8);
+}
+
+.details {
+    display: none; 
+    position: fixed; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    z-index: 1000; 
+    border: 1px solid #ccc;
+    padding: 15px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    max-width: 90%; 
+    width: 400px; 
+    border-radius: 8px; 
+}
+
+.details img {
+    max-width: 100%;
+    height: auto;
+}
+
+.close-button {
+    background: #f00;
+    color: #fff;
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+}
+
   
