--- a/style.css
+++ b/style.css
@@ -77,12 +77,15 @@
 }
 
   
-body, html {
+body{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
     line-height: 1.75rem;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 nav {
@@ -244,12 +247,28 @@ form > p {
     background-color: #45a049;
 }
 
-
 .content {
     padding: 20px;
     background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
+
+.earthTable {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
 }
 
 h1 {
@@ -288,4 +307,68 @@ section p {
 
 .geography {
     background-color: #80463077;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    text-align: center;
+}
+
+footer div {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-right: auto;
+}
+
+footer p {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0px;
+}
+
+footer ul {
+    display: flex;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 12px;
+    margin: 5px;
+}
+
+footer a:hover {
+    color: #0d6efd;
+}
+
+table {
+    margin-top: 20px;
+    color: black;
+}
+
+th, td {
+    padding: 12px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:nth-child(odd) {
+    background-color: #c9c9c9;
 }
