Styled ecology background

--- a/style.css
+++ b/style.css
@@ -309,6 +309,10 @@ section p {
     background-color: #80463077;
 }
 
+#culture {
+    background-color: #8c2ac477;
+}
+
 footer {
     background-color: #333;
     color: #fff;
