--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ tr:nth-child(odd) {
 }
 
 .logo {
-    max-width: 100px;
+    max-width: 120px;
     height: auto;
     margin-right: 15px; 
 }
@@ -434,7 +434,7 @@ tr:nth-child(odd) {
 .title {
     font-size: 2rem; 
     font-weight: bold; 
-    color: #333; 
+    color: white; 
     margin: 0; 
 }
 
@@ -444,7 +444,8 @@ tr:nth-child(odd) {
 
 #multimedia {
     width: 100%;           
-    max-width: 500px;
+    max-width: 800px;
+    height: 400px;
     aspect-ratio: 16 / 9;   
     border-radius: 8px;    
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
@@ -454,7 +455,8 @@ tr:nth-child(odd) {
 .video-container {
     display: flex;          
     justify-content: center;    
-    align-items: center;    
+    align-items: center;  
+    margin: 20px;  
 }
 
 
